--- a/client/package.json
+++ b/client/package.json
@@ -14,5 +14,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://aqueous-spire-90124.herokuapp.com/"
 }
