--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
     "start": "nodemon server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build &&
+    cd ../knockout && npm install && npm run build"
   },
-
   "author": "birand koray eren",
   "license": "ISC",
   "devDependencies": {
@@ -17,9 +17,10 @@
   "dependencies": {
     "express": "^4.16.3",
     "node-fetch": "^2.1.2",
+    "serve-static": "^1.13.2",
     "whatwg-fetch": "^2.0.4"
   },
-  "engines" : {
-    "node" : "8.11.1"
+  "engines": {
+    "node": "8.11.1"
   }
 }
