--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "node-fetch": "^2.1.2",
     "serve-static": "^1.13.2",
+    "shelljs": "^0.8.2",
     "whatwg-fetch": "^2.0.4"
   },
   "engines": {
