--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "serve-static": "^1.13.2",
     "shelljs": "^0.8.2",
     "webpack": "^4.15.1",
-    "whatwg-fetch": "^2.0.4"
+    "whatwg-fetch": "^2.0.4",
+    "extract-text-webpack-plugin": "^3.0.0"
   },
   "engines": {
     "node": "8.11.1"
